Minor refactoring of imgur code